--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -76,12 +76,12 @@ h1, h2, h3, h4 {
     width: 100%;
     height: 3px;
     display: none;
-    background-color: #1F9D79;
+    background-color: #EC7F1E;
     position: absolute;
 }
 
 .nav__link:hover {
-    color: #1F9D79;
+    color: #EC7F1E;
 }
 
 .nav__link:hover:after {
@@ -104,12 +104,12 @@ h1, h2, h3, h4 {
     width: 100%;
     height: 3px;
     display: none;
-    background-color: #1F9D79;
+    background-color: #EC7F1E;
     position: absolute;
 }
 
 .nav__link_a:hover {
-    color: #1F9D79;
+    color: #EC7F1E;
 }
 
 .nav__link_a:hover:after {
@@ -233,5 +233,58 @@ cursor: pointer;
 }
 
 .b-radio label input:checked + span:before{
-  background: tomato;
+  background: #EC7F1E;
+}
+
+.form_control {
+    
+}
+
+.textbox {
+    background: #2F3231;
+    font-family: 'Farro', sans-serif;
+    font-weight: 700;
+    height:25px; 
+    width:240px;
+    border-radius: 3em; 
+    border-color: #EC7F1E;
+    color: #A2A2A2;
+    border-width: 3px;
+    padding-left: 1.5em;
+    outline: none; 
+    box-shadow: 0 4px 6px -5px hsl(0, 0%, 40%), inset 0px 4px 6px -5px hsl(0, 0%, 2%)
+
+
+} 
+
+ .textbox:hover {
+    width: 280px;
+    transition-duration: .5s;
+}
+
+select{
+    margin:0px;
+    background: rgba(0,0,0,0.3);
+    font-size: 20px;
+    border-color: #EC7F1E;
+    border-width: 3px;
+    background: #2F3231;
+    color:#A2A2A2;
+    text-shadow:0 1px 0 rgba(0,0,0,0.4);
+}
+
+.animate-gradient {
+    margin-top: 10px;
+	height: 42px;
+	line-height: 22px;
+	border-radius: 20px;
+    border-color: #EC7F1E;
+    background-color: #2F3231; 
+	font-weight: bold;
+    border-width: 3px;
+	font-size: 17px;
+	padding: 10px;
+	text-align: center;
+	color: #A2A2A2;
+    cursor: pointer;
 }
